# subhook

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  subhook.c  subhook.h  subhook_linux.c  subhook_macos.c  subhook_private.h  subhook_unix.c  subhook_windows.c  subhook_x86.c
cmake/: FindYasm.cmake
include/: subhook.h
test/: CMakeLists.txt  asm_test.c  build_foo.sh  foo_32.asm  foo_64.asm  foo_64_unix.asm  foo_main.c  test.c  test.cpp  test.out  test_lib.c  test_lib.cpp  test_lib.def  test_prog.c  test_prog.cpp
tests/: .gitignore  CMakeLists.txt  foo.cpp  foo.sh  foo_32.asm  foo_64_win.asm  foo_main.c  foo_main.cpp  test.c  test.cpp
